--- a/styles.css
+++ b/styles.css
@@ -63,3 +63,80 @@ h2 {
     max-width: 280px;
     border-radius: 15px;
 }
+.options {
+    position: relative;
+    z-index: 2;
+}
+
+.option {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.option img.icon {
+    width: 25px;
+    margin-right: 10px;
+}
+
+.option .text {
+    flex-grow: 1;
+    padding-left: 10px;
+}
+
+.option .title {
+    font-weight: 500;
+    margin: 0;
+}
+
+.option .subtitle {
+    font-size: 0.8rem;
+    color: #888;
+    margin: 0;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 20px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: 0.4s;
+    border-radius: 20px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 16px;
+    width: 16px;
+    border-radius: 50%;
+    background-color: white;
+    transition: 0.4s;
+    left: 2px;
+    bottom: 2px;
+}
+
+input:checked + .slider {
+    background-color: #468de6;
+}
+
+input:checked + .slider:before {
+    transform: translateX(20px);
+}
